@@ -3,7 +3,7 @@ import xyz.jpenilla.runpaper.task.RunServer
 
 plugins {
   `my-conventions`
-  id("io.papermc.paperweight.userdev") version "2.0.0-beta.14" apply false
+  id("io.papermc.paperweight.userdev") version "2.0.0-beta.18" apply false
   id("xyz.jpenilla.run-paper") version "2.3.1" // Adds runServer task for testing
   id("xyz.jpenilla.resource-factory-bukkit-convention") version "1.2.0" // Generates plugin.yml based on the Gradle config
   id("com.gradleup.shadow") version "8.3.5"
@@ -23,6 +23,17 @@ repositories {
   gradlePluginPortal()
   maven("https://repo.papermc.io/repository/maven-public/")
   maven("https://repo.codemc.io/repository/maven-releases/")
+  maven("https://jitpack.io")
+  maven("https://repo.grim.ac/snapshots") { // Grim API
+    content {
+      includeGroup("ac.grim.grimac")
+      includeGroup("com.github.retrooper")
+    }
+  }
+  maven {
+    name = "scarsz"
+    url = uri("https://nexus.scarsz.me/content/groups/public/")
+  }
 }
 
 publishing {
@@ -33,17 +44,12 @@ publishing {
       version = "1.0.0"
       from(components["java"])
     }
-
   }
 }
 
 dependencies {
-
-
-
-
   compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
-  compileOnly("com.github.retrooper:packetevents-spigot:2.7.0")
+  compileOnly("com.github.retrooper:packetevents-spigot:2.9.3")
   testImplementation(platform("org.junit:junit-bom:5.10.0"))
   testImplementation("org.junit.jupiter:junit-jupiter")
   compileOnly("org.projectlombok:lombok:1.18.36")
@@ -51,14 +57,21 @@ dependencies {
   testCompileOnly("org.projectlombok:lombok:1.18.36")
   testAnnotationProcessor("org.projectlombok:lombok:1.18.36")
   compileOnly("org.jetbrains:annotations:26.0.2")
-  compileOnly("ac.grim.grimac:grimac:2.3.71")
+
+  compileOnly("ac.grim.grimac:bukkit:2.3.72-933f6c745")
+//  compileOnly("ac.grim.grimac:common:2.3.72-933f6c745")
+
   implementation("net.objecthunter:exp4j:0.4.8")
 
-  implementation(project(":main"))
+  api("github.scarsz:configuralize:1.4.1") {
+    exclude(group = "org.yaml", module = "snakeyaml")
+  }
+  api("ac.grim.grimac:GrimAPI:1.1.0.0")
 
-  // Shade the reobf variant
+  implementation(project(":main"))
   runtimeOnly(project(":v1_21_R1"))
   runtimeOnly(project(":v1_21_R4"))
+  runtimeOnly(project(":v1_21_R8"))
 
   // For Paper 1.20.5+, we don't need to use the reobf variant.
   // If you still support spigot, you will need to use the reobf variant,
@@ -114,6 +127,14 @@ tasks.runServer {
 }
 
 
+tasks.withType(xyz.jpenilla.runtask.task.AbstractRun::class) {
+  javaLauncher = javaToolchains.launcherFor {
+    vendor = JvmVendorSpec.JETBRAINS
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+  jvmArgs("-XX:+AllowEnhancedClassRedefinition -XX:+EnableDynamicAgentLoading")
+}
+
 tasks.register("run1", RunServer::class) {
   minecraftVersion("1.21.1")
   pluginJars.from(tasks.shadowJar.flatMap { it.archiveFile })
@@ -125,5 +146,12 @@ tasks.register("run4", RunServer::class) {
   minecraftVersion("1.21.4")
   pluginJars.from(tasks.shadowJar.flatMap { it.archiveFile })
   runDirectory = layout.projectDirectory.dir("run1_21_4")
+  systemProperties["Paper.IgnoreJavaVersion"] = true
+}
+
+tasks.register("run8", RunServer::class) {
+  minecraftVersion("1.21.8")
+  pluginJars.from(tasks.shadowJar.flatMap { it.archiveFile })
+  runDirectory = layout.projectDirectory.dir("run1_21_8")
   systemProperties["Paper.IgnoreJavaVersion"] = true
 }
